added support on nhif api correction